feat: 配置 github action

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,22 +1,30 @@
-name: Go
+name: Publish
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - "*"
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: go build -v ./...
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: github-switch
+          asset_name: git-switch
+          tag: ${{ github.ref }}
+          overwrite: true
+          body: "git switch binaries"
