--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: github-switch
+          file: ./github-switch
           asset_name: git-switch
           tag: ${{ github.ref }}
           overwrite: true
