--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Build
         run: go build -v ./...
 
+      - name: Show
+        run: ls -al
+
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
