--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,14 +19,11 @@ jobs:
       - name: Build
         run: go build -v ./...
 
-      - name: Show
-        run: ls -al
-
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./github-switch
+          file: git-switch
           asset_name: git-switch
           tag: ${{ github.ref }}
           overwrite: true
